2011-03-28  Mike Frysinger  <vapier@gentoo.org>

	* config/bfin-parse.y (16bit acc add): Return yyerror when dest
	reg $1 is the same as dest reg $7.

2011-03-28  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (handle_quad): New.
	(md_pseudo_table): Add "quad".

2011-03-26  John Marino  <binutils@marino.st>

	* configure.tgt: Fix support for *-*-dragonfly*.
	* config/tc-i386.c: define SVR4_COMMENT_CHARS for dragonfly.
	* config/te-dragonfly.h: New file.

2011-03-24  Eric B. Weddington  <eric.weddington@atmel.com>

	* config/tc-avr.c (mcu_types): Add new devices: atmega325pa,
	atmega3250pa, atmega3290pa, atmega16hvbrevb, atmega32hvbrevb,
	at90pwm161.
	* doc/c-avr.texi: Document new device names.

2011-03-24  Mike Frysinger  <vapier@gentoo.org>

	* config/bfin-parse.y (dual 32bit add/sub): Return yyerror when dest
	reg $1 is the same as dest reg $7.
	(quad 16bit add/sub): Return yyerror when dest reg $1 is the same as
	dest reg $7.

2011-03-24  Mike Frysinger  <vapier@gentoo.org>

	* config/bfin-parse.y (check_macfuncs): Clarify error message when
	P is mismatched.  Check destination regno are off by one when P is
	set, or are equal when P is not set.

2011-03-23  Mike Frysinger  <vapier@gentoo.org>

	* config/bfin-parse.y (SEARCH): Return yyerror when dest reg $2 is
	the same as dest reg $4.
	(BITMUX): Return yyerror when dest reg $3 is the same as dest reg $5.

2011-03-23  Eric B. Weddington  <eric.weddington@atmel.com>

	* config/tc-avr.c (mcu_types): Add new xmega devices: atxmega64a1u,
	atxmega128a1u, atxmega16x1, atxmega32x1, atxmega128b1, atxmega256a3bu.
	* doc/c-avr.texi: Document new device names.

2011-03-22  Eric B. Weddington  <eric.weddington@atmel.com>

	* config/tc-avr.c (struct avr_opcodes_s): Add opcode field.
	(AVR_INSN): Change definition to match.
	(avr_opcodes): Likewise, change to match.
	(mcu_types): Add XMEGA architecture names and new XMEGA device names.
	(md_show_usage): Add XMEGA architecture names.