@@ -1,3 +1,8 @@
+2011-03-29  Mike Frysinger  <vapier@gentoo.org>
+
+	* gas/bfin/expected_errors.s: Add invalid BYTEOP16P insn tests.
+	* gas/bfin/expected_errors.l: Add new error messages.
+
 2011-03-28  Mike Frysinger  <vapier@gentoo.org>
 
 	* gas/bfin/expected_errors.s: Add invalid 16bit acc add insn tests.
