@@ -1,3 +1,8 @@
+2011-03-29  Mike Frysinger  <vapier@gentoo.org>
+
+	* config/bfin-parse.y (BYTEOP16P): Return yyerror when dest
+	reg $2 is the same as dest reg $4.
+
 2011-03-28  Mike Frysinger  <vapier@gentoo.org>
 
 	* config/bfin-parse.y (16bit acc add): Return yyerror when dest
